force-app/main/default/objects/LLC_BI__Schedule_Section__c/fields/LLC_BI__Dropdown_Items__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Dropdown_Items__c</fullName>
    <description>Admins manually populate this text field with the drop-down items the user selects in the schedule. Values must be separated by two vertical bar symbols. For example, value1||value2.</description>
    <label>Drop-down Items</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>