force-app/main/default/objects/LLC_BI__Schedule_Section__c/fields/LLC_BI__Hide_Schedule_Section__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Hide_Schedule_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admins select this optional checkbox to hide a schedule section in the Schedules UI. By default, it is unselected.</description>
    <label>Hide Schedule Section</label>
    <type>Checkbox</type>
</CustomField>