force-app/main/default/objects/LLC_BI__Schedule_Section__c/fields/LLC_BI__Is_Restricted_Dropdown__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Restricted_Dropdown__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admins select this optional checkbox to remove the ability for users to manually enter unique values in the Picklist Values field. By default, it is unselected.</description>
    <label>Is Restricted Drop-down</label>
    <type>Checkbox</type>
</CustomField>