force-app/main/default/objects/LLC_BI__Schedule_Section__c/fields/LLC_BI__Is_Sticky__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Sticky__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators select this optional checkbox to designate that the schedule section remains in place. By default, it is not selected.</description>
    <inlineHelpText>Select this checkbox to make the schedule section remain in place.</inlineHelpText>
    <label>Is Sticky</label>
    <type>Checkbox</type>
</CustomField>