force-app/main/default/objects/LLC_BI__Schedule_Section__c/fields/LLC_BI__Rent_Roll__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rent_Roll__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The system automatically populates this optional lookup field with the associated schedule section for a rent roll.</description>
    <label>Rent Roll</label>
    <referenceTo>LLC_BI__Rent_Roll__c</referenceTo>
    <relationshipLabel>Schedule Sections</relationshipLabel>
    <relationshipName>Schedule_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>