force-app/main/default/objects/LLC_BI__Schedule_Section__c/fields/LLC_BI__Schedule__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Schedule__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The system automatically populates this required Lookup field to associate a Schedule Section to its Schedule. By default, it displays the associated Schedule.</description>
    <label>Schedule</label>
    <referenceTo>LLC_BI__Schedule__c</referenceTo>
    <relationshipLabel>Schedule Sections</relationshipLabel>
    <relationshipName>Schedule_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>