force-app/main/default/objects/LLC_BI__Schedule_Section__c/fields/LLC_BI__Show_Total__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Show_Total__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators select this boolean field so that the total will show for this configured Section for the Schedule. By default, it is unselected.</description>
    <label>Show Total</label>
    <type>Checkbox</type>
</CustomField>