force-app/main/default/objects/LLC_BI__Schedule_Section__c/fields/LLC_BI__Source_Section__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Source_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional lookup field with the ID of the Schedule Section it was cloned from. By default, it is blank.</description>
    <label>Source Section</label>
    <referenceTo>LLC_BI__Schedule_Section__c</referenceTo>
    <relationshipLabel>Cloned Sections</relationshipLabel>
    <relationshipName>Cloned_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>